# Usagi-Clone

./: AGENTS.md  README.md  gradle.properties  h origin main --force  settings.gradle
.github/workflows/: ci.yml  issue_moderator.yml  trigger-site-deploy.yml
app/: build.gradle  proguard-rules.pro
app/src/debug/res/xml/: pref_debug.xml  pref_root_debug.xml
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jpeg-bridge.cpp  jpeg-stubs.cpp  native_image_probe.cpp  native_zip_writer.cpp  yuv-converter.cpp
app/src/main/res/drawable/: ic_updated_selector.xml
app/src/main/res/layout/: activity_color_filter.xml  activity_details.xml  activity_details_classic.xml  activity_main.xml  activity_manga_directories.xml  activity_override_edit.xml  activity_reader.xml  activity_scrobbler_config.xml  activity_search.xml  activity_sources_catalog.xml  activity_stats.xml  dialog_download.xml  dialog_favorite.xml  dialog_import.xml  dialog_local_info.xml  fragment_changelog.xml  fragment_chapters.xml  fragment_filter_header.xml  fragment_list.xml  fragment_list_simple.xml  fragment_manga_bookmarks.xml  fragment_pages.xml  fragment_preview.xml  fragment_reader_double.xml  fragment_reader_webtoon.xml  item_bookmark_large.xml  item_categories_all.xml  item_category.xml  item_checkable_new.xml  item_color_scheme.xml  item_download.xml  item_empty_card.xml  item_empty_hint.xml  item_empty_state.xml  item_explore_source_grid.xml  item_explore_source_list.xml  item_feed.xml  item_manga_alternative.xml  item_manga_grid.xml  item_manga_list.xml  (+31 more)
app/src/main/res/layout-land/: item_empty_state.xml
app/src/main/res/layout-w600dp-land/: activity_color_filter.xml  activity_details.xml  activity_details_classic.xml  activity_main.xml  activity_reader.xml  activity_stats.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-el/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-et/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fil/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-hr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-kk/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ms/: strings.xml
app/src/main/res/values-nb-rNO/: strings.xml
app/src/main/res/values-night/: colors.xml  colors_themed.xml  themes.xml
app/src/main/res/values-nn/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sr/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-v23/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+1149 files in other folders)
